--- a/main.html
+++ b/main.html
@@ -1,15 +1,45 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <!-- Profile Image -->
+    <img src="profile.jpg" alt="My Profile Image" width="150">
+
+    <!-- Name -->
+    <h1>Aryaman M Singha</h1>
+
+    <!-- LinkedIn Profile -->
+    <p>
+        <a href="https://www.linkedin.com/in/your-profile" target="_blank">Visit my LinkedIn</a>
+    </p>
+
+    <!-- Skills Section -->
+    <section id="skills">
+        <h2>Skills</h2>
+        <p>Java, C++, Python, JavaScript, React.js, Node.js, SQL, NoSQL, Docker, Kubernetes</p>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li>Next.js AI Chat Application</li>
+            <li>Secure Hybrid Cloud File Storage</li>
+            <li>E-commerce Website using MERN Stack</li>
+            <li>Real-time Chat Application with WebSockets</li>
+            <li>Blockchain-based Voting System</li>
+        </ul>
+    </section>
+
+    <script type="text/javascript" src="./script.js"></script>
 
 </body>
 
